IG-2041 [Nuclio] White background in description cell on hover

--- a/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
+++ b/src/nuclio/projects/project/functions/function-collapsing-row/function-collapsing-row.tpl.html
@@ -17,7 +17,7 @@
                  data-uib-tooltip="{{$ctrl.function.spec.description}}"
                  data-tooltip-append-to-body="true"
                  data-tooltip-placement="top">
-                <span class="description-content common-table-cell-content">{{$ctrl.function.spec.description}}</span>
+                <span class="description-content common-table-cell-content" data-ng-bind="$ctrl.function.spec.description" data-ellipsis></span>
             </div>
             <div class="igz-col-10 common-table-cell">
                 {{$ctrl.convertedStatusState}}
