--- a/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/version-configuration.tpl.html
@@ -40,16 +40,16 @@
                         data-on-change-callback="$ctrl.onConfigurationChangeCallback"></ncl-version-configuration-build>
             </div>
             <div class="row"
-                 data-ng-if="!$ctrl.isInvisibleForCurrentRuntime($ctrl.version.spec.runtime) || $ctrl.isDemoMode()"
-                 data-ng-class="{'shell-runtime': $ctrl.version.spec.runtime === 'shell' && !$ctrl.isDemoMode()}">
+                 data-ng-if="$ctrl.isShowForCurrentRuntime($ctrl.version.spec.runtime)"
+                 data-ng-class="{'shell-runtime': $ctrl.version.spec.runtime === 'shell'}">
                 <ncl-version-configuration-logging
-                        data-ng-class="{'invisible-block': !$ctrl.isDemoMode() && $ctrl.version.spec.runtime !== 'java'}"
+                        data-ng-class="{'invisible-block': $ctrl.version.spec.runtime !== 'java'}"
                         class="configuration-block"
                         data-version="$ctrl.version"
                         data-on-change-callback="$ctrl.onConfigurationChangeCallback"></ncl-version-configuration-logging>
                 <ncl-version-configuration-runtime-attributes
                         class="configuration-block runtime-attributes"
-                        data-ng-class="{'invisible-block': $ctrl.isInvisibleForCurrentRuntime($ctrl.version.spec.runtime)}"
+                        data-ng-class="{'invisible-block': $ctrl.isInvisibleForCurrentRuntime($ctrl.version.spec.runtime) || !$ctrl.isDemoMode()}"
                         data-version="$ctrl.version"
                         data-on-change-callback="$ctrl.onConfigurationChangeCallback"></ncl-version-configuration-runtime-attributes>
             </div>
