--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-logging/version-configuration-logging.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-logging/version-configuration-logging.tpl.html
@@ -7,12 +7,13 @@
                 <div class="logger-dropdown">
                     <span class="label">Logger level</span>
                     <igz-default-dropdown data-selected-item="$ctrl.version.spec.loggerSinks[0].level"
-                                          data-select-property-only="type"
-                                          data-dropdown-type="severity"
+                                          data-select-property-only="id"
+                                          data-values-array="$ctrl.logLevelValues"
                                           data-item-select-callback="$ctrl.setPriority(item)"
                                           data-prevent-drop-up="true"></igz-default-dropdown>
                 </div>
-                <div class="logger-input">
+                <div class="logger-input"
+                     data-ng-if="$ctrl.isDemoMode()">
                     <span class="label">Logger destination</span>
                     <igz-validating-input-field class="nuclio-validating-input"
                                                 data-field-type="input"
