--- a/src/nuclio/projects/project/functions/functions.tpl.html
+++ b/src/nuclio/projects/project/functions/functions.tpl.html
@@ -115,7 +115,7 @@
                         <div class="sortable-wrapper"
                              data-ng-hide="$ctrl.searchStates.searchNotFound && $ctrl.searchStates.searchInProgress"
                              data-ng-model="$ctrl.data.working.ui.children">
-                            <div class="data-lifecycle-layers" data-ng-repeat="aFunction in $ctrl.functions track by $index">
+                            <div class="data-lifecycle-layers" data-ng-repeat="aFunction in $ctrl.functions track by aFunction.metadata.name">
                                 <div data-igz-show-hide-search-item="function">
                                     <ncl-function-collapsing-row data-function="aFunction"
                                                                  data-project="$ctrl.project"
