Fix [Nuclio] Templates: drop-down params not populating properly

--- a/src/nuclio/common/screens/create-function/function-from-template/function-from-template-dialog/function-from-template-dialog.tpl.html
+++ b/src/nuclio/common/screens/create-function/function-from-template/function-from-template-dialog/function-from-template-dialog.tpl.html
@@ -48,7 +48,8 @@
                                       data-selected-item="field.attributes.defaultValue"
                                       data-select-property-only="id"
                                       data-is-required="field.required"
-                                      data-item-select-callback="$ctrl.dropdownCallback(item, isItemChanged, name)"
+                                      data-item-select-field="{{field.name}}"
+                                      data-item-select-callback="$ctrl.dropdownCallback(item, isItemChanged, field)"
                                       data-form-object="$ctrl.templateForm"
                                       data-input-name="{{field.name}}"></igz-default-dropdown>
             </div>
