--- a/src/nuclio/projects/projects.tpl.html
+++ b/src/nuclio/projects/projects.tpl.html
@@ -60,27 +60,27 @@
                     </igz-action-checkbox-all>
                     <div class="igz-row common-table-cells-container">
                         <div class="igz-col-25 common-table-cell sortable name"
-                             data-ng-class="$ctrl.isColumnSorted('displayName', $ctrl.sortedColumnName, $ctrl.isReverseSorting)"
+                             data-ng-class="$ctrl.getColumnSortingClasses('displayName', $ctrl.sortedColumnName, $ctrl.isReverseSorting)"
                              data-ng-click="$ctrl.sortTableByColumn('displayName')">Name
                             <span class="sort-arrow"></span>
                             <div data-igz-resizable-table-column data-col-class="common-table-cell.name"></div>
                         </div>
                         <div class="igz-col-{{$ctrl.isDemoMode() ? '25' : '75'}} common-table-cell sortable description"
-                             data-ng-class="$ctrl.isColumnSorted('description', $ctrl.sortedColumnName, $ctrl.isReverseSorting)"
+                             data-ng-class="$ctrl.getColumnSortingClasses('description', $ctrl.sortedColumnName, $ctrl.isReverseSorting)"
                              data-ng-click="$ctrl.sortTableByColumn('description')">Description
                             <span class="sort-arrow"></span>
                             <div data-igz-resizable-table-column data-col-class="common-table-cell.description"></div>
                         </div>
                         <div data-ng-if="$ctrl.isDemoMode()"
                              class="igz-col-25 common-table-cell sortable created-by"
-                             data-ng-class="$ctrl.isColumnSorted('created_by', $ctrl.sortedColumnName, $ctrl.isReverseSorting)"
+                             data-ng-class="$ctrl.getColumnSortingClasses('created_by', $ctrl.sortedColumnName, $ctrl.isReverseSorting)"
                              data-ng-click="$ctrl.sortTableByColumn('created_by')">Created by
                             <span class="sort-arrow"></span>
                             <div data-igz-resizable-table-column data-col-class="common-table-cell.created-by"></div>
                         </div>
                         <div data-ng-if="$ctrl.isDemoMode()"
                              class="igz-col-25 common-table-cell sortable created-date"
-                             data-ng-class="$ctrl.isColumnSorted('created_date', $ctrl.sortedColumnName, $ctrl.isReverseSorting)"
+                             data-ng-class="$ctrl.getColumnSortingClasses('created_date', $ctrl.sortedColumnName, $ctrl.isReverseSorting)"
                              data-ng-click="$ctrl.sortTableByColumn('created_date')">
                             Created date
                             <span class="sort-arrow"></span>
