IG-2073 [General] Apply action icons styles by design

--- a/src/nuclio/projects/project/functions/functions.tpl.html
+++ b/src/nuclio/projects/project/functions/functions.tpl.html
@@ -46,10 +46,11 @@
                     </div>
                 </div>
             </div>
-
             <igz-actions-panes data-filters-toggle-method="$ctrl.toggleFilters()"
                                data-filters-counter="$ctrl.filtersCounter"
-                               data-show-filter-icon="true"></igz-actions-panes>
+                               data-show-filter-icon="true"
+                               data-is-filters-opened="$ctrl.isFiltersShowed.value">
+            </igz-actions-panes>
         </div>
     </igz-info-page-actions-bar>
 
