--- a/src/nuclio/projects/projects.tpl.html
+++ b/src/nuclio/projects/projects.tpl.html
@@ -45,7 +45,9 @@
             </div>
             <igz-actions-panes data-filters-toggle-method="$ctrl.toggleFilters()"
                                data-show-filter-icon="true"
-                               data-filters-counter="$ctrl.filtersCounter"></igz-actions-panes>
+                               data-filters-counter="$ctrl.filtersCounter"
+                               data-is-filters-opened="$ctrl.isFiltersShowed.value">
+            </igz-actions-panes>
         </div>
     </igz-info-page-actions-bar>
 
