fixed splitter on code tab

--- a/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/version-code.tpl.html
@@ -1,6 +1,6 @@
 <div data-ui-layout="{ flow : 'column', dividerSize: 3 }" class="ncl-edit-version-code ncl-version">
     <div ui-layout-container min-size="200px" class="code-section">
-        <div class="igz-scrollable-container"
+        <div class="igz-scrollable-container code-scrollable-container"
              data-ng-scrollbars data-ng-scrollbars-config="$ctrl.scrollConfigHorizontal">
             <div class="ncl-edit-version-code-wrapper">
                 <form name="$ctrl.versionCodeForm" class="ncl-edit-version-code-form">
