--- a/src/nuclio/projects/project/functions/version/version.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version.tpl.html
@@ -15,8 +15,8 @@
             </div>
             <div class="actions-bar-left actions-buttons-block">
                 <button class="ncl-new-entity-button"
-                        data-ng-class="{'disabled': $ctrl.checkValidDeployState() || $ctrl.isDeployDisabled}"
-                        data-ng-click="$ctrl.checkValidDeployState() || $ctrl.deployButtonClick()">
+                        data-ng-class="{'disabled': $ctrl.isInValidDeployState() || $ctrl.isDeployDisabled}"
+                        data-ng-click="$ctrl.isInValidDeployState() || $ctrl.deployButtonClick()">
                     Deploy
                 </button>
             </div>
@@ -25,21 +25,21 @@
 
     <div data-ng-if="$ctrl.isDeployResultShown"
          class="ncl-edit-version-execution-result deploy-result"
-         data-ng-class="{'in-progress': $ctrl.checkValidDeployState(),
+         data-ng-class="{'in-progress': $ctrl.isInValidDeployState(),
                          'failed'     : $ctrl.deployResult.status.state === 'error'}">
         <div class="btn-close igz-icon-close"
-             data-ng-if="!$ctrl.checkValidDeployState()"
+             data-ng-if="!$ctrl.isInValidDeployState()"
              data-ng-click="$ctrl.toggleDeployResult()"></div>
         <div class="icon-collapsed general-content"
              data-ng-class="$ctrl.rowIsCollapsed.deployBlock ? 'igz-icon-right' : 'igz-icon-down'"
              data-ng-click="$ctrl.onRowCollapse('deployBlock')"></div>
         <div class="ncl-execution-result-status"
              data-ng-class="{'succeeded'  : $ctrl.deployResult.status.state === 'ready',
-                             'in-progress': $ctrl.checkValidDeployState(),
+                             'in-progress': $ctrl.isInValidDeployState(),
                              'collapsed'  : $ctrl.rowIsCollapsed.deployBlock}">
             <span class="result-status-icon"
                   data-ng-class="{'igz-icon-tick-round' : $ctrl.deployResult.status.state === 'ready',
-                                  'igz-icon-properties' : $ctrl.checkValidDeployState(),
+                                  'igz-icon-properties' : $ctrl.isInValidDeployState(),
                                   'igz-icon-block'      : $ctrl.deployResult.status.state === 'error'}"></span>
             <span class="result-state">{{$ctrl.getDeployStatusState($ctrl.deployResult.status.state)}}</span>
         </div>
