IG-1811 [Nuclio] Drop-down menu visual issue

--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/test-events-navigation-tabs/test-events-navigation-tabs.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/test-events-navigation-tabs/test-events-navigation-tabs.tpl.html
@@ -12,6 +12,7 @@
                           data-values-array="$ctrl.logLevelValues"
                           data-select-property-only="id"
                           data-selected-item="$ctrl.selectedLogLevel"
-                          data-item-select-callback="$ctrl.onChangeLogLevel({selectedLogLevel: item})">
+                          data-item-select-callback="$ctrl.onChangeLogLevel({selectedLogLevel: item})"
+                          data-enable-overlap="true">
     </igz-default-dropdown>
 </div>
