--- a/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-code/function-event-pane/function-event-pane.tpl.html
@@ -92,7 +92,8 @@
                             <igz-default-dropdown data-values-array="$ctrl.requestMethods"
                                                   data-select-property-only="name"
                                                   data-selected-item="$ctrl.selectedEvent.spec.attributes.method"
-                                                  data-item-select-callback="$ctrl.onChangeRequestMethod(item)">
+                                                  data-item-select-callback="$ctrl.onChangeRequestMethod(item)"
+                                                  data-enable-overlap="true">
                             </igz-default-dropdown>
                             <div class="path">
                                 {{$ctrl.getInvocationUrl()}}
@@ -115,7 +116,8 @@
                                 <div class="body-types">
                                     <igz-default-dropdown data-values-array="$ctrl.requestBodyTypes"
                                                           data-selected-item="$ctrl.requestBodyType"
-                                                          data-item-select-callback="$ctrl.onChangeRequestBodyType(item)">
+                                                          data-item-select-callback="$ctrl.onChangeRequestBodyType(item)"
+                                                          data-enable-overlap="true">
                                     </igz-default-dropdown>
                                 </div>
                                 <div class="main-block">
