--- a/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
+++ b/src/nuclio/projects/project/functions/version/version-configuration/tabs/version-configuration-resources/version-configuration-resources.tpl.html
@@ -58,7 +58,6 @@
                                           data-validation-is-required="false"
                                           data-form-object="$ctrl.resourcesForm"
                                           data-input-name="requestCpu"
-                                          data-suffix-unit="{{ $ctrl.selectedCpuRequestItem.unit }}"
                                           data-placeholder="{{ $ctrl.selectedCpuRequestItem.placeholder }}"
                                           data-update-number-input-callback="$ctrl.inputValueCallback(newData, field)"
                                           data-update-number-input-field="resources.requests.cpu"
@@ -82,7 +81,6 @@
                                           data-validation-is-required="false"
                                           data-form-object="$ctrl.resourcesForm"
                                           data-input-name="limitsCpu"
-                                          data-suffix-unit="{{ $ctrl.selectedCpuLimitItem.unit }}"
                                           data-placeholder="{{ $ctrl.selectedCpuLimitItem.placeholder }}"
                                           data-update-number-input-callback="$ctrl.inputValueCallback(newData, field)"
                                           data-update-number-input-field="resources.limits.cpu"
@@ -101,11 +99,11 @@
             </div>
 
             <div class="igz-row form-row range-inputs-row slider-block">
-                <div class="igz-col-10 row-title">Target CPU</div>
+                <div class="igz-col-10 row-title target-cpu-title">Target CPU</div>
                 <div class="slider-row">
                     <igz-slider-input-block data-slider-config="$ctrl.targetCpuSliderConfig"
                                             data-measure-units="null"
-                                            data-value-unit="$ctrl.targetValueUnit"
+                                            data-value-unit="$ctrl.targetCpuValueUnit"
                                             data-slider-block-updating-broadcast=""
                                             data-on-change-callback="$ctrl.sliderInputCallback"
                                             data-update-slider-input="spec.targetCPU"
