Fix [Nuclio] Should not allow to start function name with a digit

--- a/src/nuclio/common/screens/create-function/function-from-template/function-from-template.tpl.html
+++ b/src/nuclio/common/screens/create-function/function-from-template/function-from-template.tpl.html
@@ -27,7 +27,7 @@
                                             data-hide-counter="false"
                                             data-input-model-options="$ctrl.inputModelOptions"
                                             data-placeholder-text="Type function name"
-                                            data-uib-tooltip="Name must be 1-63 characters long, consisting of digits, lower-case letters and hyphens only. It cannot start or end with a hyphen."
+                                            data-uib-tooltip="Name must be 1-63 characters long, must consist of lower case alphanumeric characters or hyphen, start with an alphabetic character, and end with an alphanumeric character (e.g. 'my-name',  or 'abc-123')."
                                             data-tooltip-popup-delay="500"
                                             data-tooltip-append-to-body="true"></igz-validating-input-field>
             </div>
